cmake_minimum_required(VERSION 3.15)
project(HausarbeitWegsuche)

set(CMAKE_CXX_STANDARD 14)

find_package(Boost 1.57.0 COMPONENTS system filesystem REQUIRED)

if(Boost_FOUND)
    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
    message(STATUS "Boost_VERSION: ${Boost_VERSION}")

    include_directories(${Boost_INCLUDE_DIRS})
endif()


add_executable(HausarbeitWegsuche main.cpp)
add_executable(Test test.cpp)

if(Boost_FOUND)
    target_link_libraries(HausarbeitWegsuche ${Boost_LIBRARIES})
endif()
